@@ -1,15 +1,12 @@
 package com.cdtn.kltn.dto.property.mapper;
 
-import com.cdtn.kltn.dto.property.request.CreatePropertyDTO;
 import com.cdtn.kltn.dto.property.request.PropertyImageDTO;
 import com.cdtn.kltn.entity.Image;
-import com.cdtn.kltn.entity.Property;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 public class ImageMapperProperty {
@@ -17,7 +14,7 @@ public class ImageMapperProperty {
     public List<Image> createListImage(List<PropertyImageDTO> imageList, String codeProperty, Long index) {
         List<Image> list = new ArrayList<>();
         for (int i = 0; i < imageList.size(); i++) {
-            list.add(Image.builder().codeImage("IMAGE_" + String.valueOf(index + i + 1))
+            list.add(Image.builder().codeImage("IMAGE_" + (index + i + 1))
                                     .propertyCode(codeProperty)
                                     .url(imageList.get(i).getUrl())
                                     .level(2)
@@ -29,7 +26,7 @@ public class ImageMapperProperty {
         List<Image> differentLists = currentList.stream()
                 .filter(item1 -> newList.stream()
                         .noneMatch(item2 -> Objects.equals(item2.getCodeImage(), item1.getCodeImage())))
-                .collect(Collectors.toList());
+                .toList();
         for (Image image: differentLists) {
             currentList.removeIf(im -> im.getCodeImage().equals(image.getCodeImage()));
         }
@@ -56,7 +53,7 @@ public class ImageMapperProperty {
 
     public Image checkContains(String codeProperty, List<Image> currentList){
         for (Image image : currentList) {
-            if(image.getCodeImage().equals(codeProperty)){return image;};
+            if(image.getCodeImage().equals(codeProperty)){return image;}
         }
         return null;
     }
