@@ -1,13 +1,13 @@
 package com.cdtn.kltn.service;
 
 import com.cdtn.kltn.common.UltilsPage;
-import com.cdtn.kltn.dto.pagination.PagingResponeDTO;
-import com.cdtn.kltn.dto.property.request.PropertyImageDTO;
-import com.cdtn.kltn.dto.property.request.PropertySearchDTO;
 import com.cdtn.kltn.dto.base.response.BaseResponseData;
+import com.cdtn.kltn.dto.pagination.PagingResponeDTO;
 import com.cdtn.kltn.dto.property.mapper.ImageMapperProperty;
 import com.cdtn.kltn.dto.property.mapper.PropertyMapper;
 import com.cdtn.kltn.dto.property.request.CreatePropertyDTO;
+import com.cdtn.kltn.dto.property.request.PropertyImageDTO;
+import com.cdtn.kltn.dto.property.request.PropertySearchDTO;
 import com.cdtn.kltn.dto.property.respone.PropertyDataSearchRespone;
 import com.cdtn.kltn.dto.property.respone.PropertyDetailDataRespone;
 import com.cdtn.kltn.dto.propertyinfo.mapper.PropertyInfoMapper;
@@ -23,11 +23,9 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -51,24 +49,24 @@ public class PropertyService {
             //thêm mới
             if (Objects.isNull(createPropertyDTO.getCodeProperty())) {
                 String codeProperty = String.valueOf(getIndex() + 1);
-                Long index_img = imageService.getIndex();
+                Long indexImg = imageService.getIndex();
                 property = propertyMapper.createProperty(createPropertyDTO, codeProperty);
                 propertyInfo = propertyInfoMapper.createPropertyInfo(createPropertyDTO, codeProperty);
-                list = imageMapperProperty.createListImage(createPropertyDTO.getImageList(), codeProperty, index_img);
+                list = imageMapperProperty.createListImage(createPropertyDTO.getImageList(), codeProperty, indexImg);
                 // Lưu
                 propertyRepository.save(property);
                 propertyInfoRepository.save(propertyInfo);
                 imageRepository.saveAll(list);
                 return new BaseResponseData(200, "Success", null);
             } else {
-                Long index_img = imageService.getIndex();
+                Long indexImg = imageService.getIndex();
                 //Thay đổi image
                 List<Image> currentList = imageService.findAllByPropertyCode(createPropertyDTO.getCodeProperty());
                 List<Image> imageListDelete = imageMapperProperty.updateListDelete(
                         createPropertyDTO.getImageList(),
                         currentList);
                 List<Image> newList = imageMapperProperty.updateList(createPropertyDTO.getImageList(),
-                        currentList, index_img);
+                        currentList, indexImg);
 
                 //Thay đổi property
                 property = propertyRepository.findByCodeProperty(createPropertyDTO.getCodeProperty())
@@ -99,14 +97,14 @@ public class PropertyService {
 
     public BaseResponseData findAllPropertyManager(PropertySearchDTO propertySearchDTO) {
         // Lấy ra offset, page
-        PagingResponeDTO pagingResponeDTO = UltilsPage.Paging(propertySearchDTO);
+        PagingResponeDTO pagingResponeDTO = UltilsPage.paging(propertySearchDTO);
         // Lấy ra danh sách theo điều kiện tìm kiếm
         List<PropertyDataSearchRespone> propertyDatumSearchRespones = propertyRepository.findAllPropertyManager
                 (propertySearchDTO.getCodeProperty(),
                         propertySearchDTO.getNameProperty(),
                         propertySearchDTO.getCodeTypeProperty(),
                         pagingResponeDTO.getOffset(),
-                        pagingResponeDTO.getRecord());
+                        pagingResponeDTO.getRecords());
         //Lấy ra tổng số bản ghi - totalRecord
         pagingResponeDTO.setTotalRecord(propertyDatumSearchRespones.stream()
                 .filter(property -> StringUtils.isEmpty(property.getCodeProperty()))
@@ -117,7 +115,7 @@ public class PropertyService {
         propertyDatumSearchRespones.removeIf(property -> StringUtils.isEmpty(property.getCodeProperty()));
         pagingResponeDTO.setData(propertyDatumSearchRespones);
 
-        return propertyDatumSearchRespones.size() > 0 ?
+        return !propertyDatumSearchRespones.isEmpty() ?
                 new BaseResponseData(200, "Danh sách tài sản hiển thị thành công", pagingResponeDTO) :
                 new BaseResponseData(500, "Danh sách tài sản hiển thị tất bại", null);
     }
@@ -128,10 +126,12 @@ public class PropertyService {
 
     public BaseResponseData findPropertyDetail(String codeProperty) {
         //Lấy ra thông tin tài sản
-        Optional<PropertyDetailDataRespone> propertyDetailDataResponeList = propertyRepository.findPropertyByCodeProperty(codeProperty);
+        Optional<PropertyDetailDataRespone> propertyDetailDataResponeList =
+                propertyRepository.findPropertyByCodeProperty(codeProperty);
         if (propertyDetailDataResponeList.isPresent()) {
             // Set lại các thuộc tính response
-            CreatePropertyDTO createPropertyDTO = propertyMapper.setDataPropertyDetailDTO(propertyDetailDataResponeList.get());
+            CreatePropertyDTO createPropertyDTO =
+                    propertyMapper.setDataPropertyDetailDTO(propertyDetailDataResponeList.get());
             // Lấy ra danh sách ảnh theo codeProperty
             List<Image> imageList = imageService.findAllByPropertyCode(codeProperty);
             // Biến đổi lại list ảnh theo đối tượng respone
@@ -139,7 +139,7 @@ public class PropertyService {
                     image -> PropertyImageDTO.builder()
                             .codeImage(image.getCodeImage())
                             .url(image.getUrl())
-                            .build()).collect(Collectors.toList());
+                            .build()).toList();
             createPropertyDTO.setImageList(imageDTOS);
                 return new BaseResponseData(200, "Chi tiết tài sản hiển thị thành công", createPropertyDTO);
         }
